# llm-utility-engineering

./: .gitignore  .pre-commit-config.yaml  Idea.md  README.md  pyproject.toml  thurstonian_model.ipynb
